<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.geysermc</groupId>
    <artifactId>geyser-parent</artifactId>
    <version>parent</version>
    <packaging>pom</packaging>
    <name>GeyserMC</name>
    <description>Allows for players from Minecraft Bedrock Edition to join Minecraft Java Edition servers.</description>
    <url>https://geysermc.org</url>

    <properties>
        <outputName>Geyser</outputName>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <organization>
        <name>GeyserMC</name>
        <url>https://github.com/GeyserMC/Geyser/blob/master/pom.xml</url>
    </organization>

    <scm>
        <connection>scm:git:https://github.com/GeyserMC/Geyser.git</connection>
        <developerConnection>scm:git:git@github.com:GeyserMC/Geyser.git</developerConnection>
        <url>https://github.com/GeyserMC/Geyser</url>
    </scm>

    <modules>
        <module>api</module>
        <module>bootstrap</module>
        <module>common</module>
        <module>connector</module>
    </modules>

    <repositories>
        <repository>
            <id>CodeMC-repo</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>nukkitx-release-repo</id>
            <url>https://repo.nukkitx.com/maven-releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>nukkitx-snapshot-repo</id>
            <url>https://repo.nukkitx.com/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>nukkitx-releases</name>
            <url>https://repo.nukkitx.com/maven-releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>nukkitx-snapshots</name>
            <url>https://repo.nukkitx.com/maven-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <defaultGoal>clean install</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources/</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                    <minimizeJar>true</minimizeJar>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
